// Vitest Snapshot v1

exports[`button > should render 1`] = `
<div>
  <div
    class="h-6 w-full"
  />
</div>
`;

exports[`button > should render with size lg 1`] = `
<div>
  <div
    class="h-12 w-full"
  />
</div>
`;

exports[`button > should render with size md 1`] = `
<div>
  <div
    class="h-6 w-full"
  />
</div>
`;

exports[`button > should render with size sm 1`] = `
<div>
  <div
    class="h-4 w-full"
  />
</div>
`;

exports[`button > should render with size xl 1`] = `
<div>
  <div
    class="h-16 w-full"
  />
</div>
`;

exports[`spacer > should render 1`] = `
<div>
  <div
    class="h-6 w-full"
  />
</div>
`;

exports[`spacer > should render with size lg 1`] = `
<div>
  <div
    class="h-12 w-full"
  />
</div>
`;

exports[`spacer > should render with size md 1`] = `
<div>
  <div
    class="h-6 w-full"
  />
</div>
`;

exports[`spacer > should render with size sm 1`] = `
<div>
  <div
    class="h-4 w-full"
  />
</div>
`;

exports[`spacer > should render with size xl 1`] = `
<div>
  <div
    class="h-16 w-full"
  />
</div>
`;
